# clear-line-agent

./: .gitignore  AUDIT.md  CLAUDE.md  LICENSE  README.md  daemon.py  index.html  pyproject.toml  railway.toml  requirements.txt
.claude/: settings.json  settings.local.json
agents/: resolution_agent.py  risk_agent.py  scanner_agent.py  websocket_agent.py
chiron/agents/: execution_agent.py  resolution_agent.py  risk_agent.py  scanner_agent.py
chiron/core/: pricing.py
chiron/research/: count_markets.py  kalshi_data_capture.py  pnl_dashboard.py
chiron/scripts/: run.sh
chiron/tests/: test_crypto_feed_agent.py  test_crypto_matching.py  test_pipeline.py  test_risk_agent.py  test_scanner_agent.py
chiron/tools/: __init__.py  cli.py  paper.py
configs/: baseline.json  processors.json
core/: config.py  kalshi_client.py
data/: vequil.db
docs/: SETUP.md
research/: diag_markets.py  inspect_keys.py  kalshi_sports_taxonomy_scan.py
src/vequil/: agent.py  asgi.py  baseline.py  config.py  mcp_server.py  normalizers.py  pipeline.py  rules.py  schema.py  settings.py  storage.py
tests/: test_agent.py  test_baseline.py  test_features.py  test_kalshi_client_parsing.py  test_kelly.py  test_normalizers.py  test_pipeline.py  test_pricing.py  test_resolution_agent.py  test_risk_agent.py  test_rules.py  test_settings.py
tmp/: index.html
tools/: dashboard.py  pipeline.py
web/static/: app.js  dashboard.html  index.html  report.html  robots.txt  sitemap.xml
