[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chiron"
version = "1.0.0"
description = "Automated BTC/ETH arbitrage for Kalshi prediction markets."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["kalshi", "trading", "kelly-criterion", "arbitrage"]
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
chiron = "chiron.tools.cli:main"
chiron-daemon = "daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["chiron"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["chiron/tests"]
